--- a/Makaan_com_Real_Estate_.ipynb
+++ b/Makaan_com_Real_Estate_.ipynb
@@ -6,7 +6,7 @@
       "name": "Makaan.com Real Estate .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMFAg7+Vwmo59A1hBcA0gxJ",
+      "authorship_tag": "ABX9TyPMF6QTiuP2eK3wV7TtK42H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "import pandas as pd\n",
         "import time"
       ],
-      "execution_count": 1,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
       "source": [
         "base_url = 'https://www.makaan.com/hyderabad-residential-property/buy-property-in-hyderabad-city?page='"
       ],
-      "execution_count": 2,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -78,6 +78,7 @@
       },
       "source": [
         "ow = []\n",
+        "stype = []\n",
         "bhk = []\n",
         "p = []\n",
         "s = []\n",
@@ -85,7 +86,7 @@
         "st = []\n",
         "pps = []"
       ],
-      "execution_count": 3,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -101,9 +102,14 @@
         "  soup = BeautifulSoup(req.text,'html')\n",
         "\n",
         "  #owner info\n",
-        "  ow_info = soup.findAll('span',attrs={'class':'seller-type'})\n",
+        "  ow_info = soup.findAll('div',attrs={'class':'seller-info'})\n",
         "  for j in ow_info:\n",
-        "    ow.append(j.text)\n",
+        "    ow.append(j.a.span.text)\n",
+        "  \n",
+        "  #seller type\n",
+        "  s_typ = soup.findAll('span',attrs={'class':'seller-type'})\n",
+        "  for j in s_typ:\n",
+        "    stype.append(j.text)\n",
         "  \n",
         "  #bhk info\n",
         "  bhk_info = soup.findAll('div',attrs={'class':'title-line'})\n",
@@ -135,7 +141,7 @@
         "  for j in pps_info:\n",
         "    pps.append(j.text)"
       ],
-      "execution_count": 4,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -145,7 +151,7 @@
       },
       "source": [
         "To make a data frame,\n",
-        "  Cross checking the number of data for each columns are same."
+        "  Cross checking the number of data to enter in each columns are same."
       ]
     },
     {
@@ -155,10 +161,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WmMiWI_8Tr9a",
-        "outputId": "719f94d5-8ef0-4a7e-ab0d-62aa9825a4fc"
+        "outputId": "07198251-bf70-4663-c40e-93ef8398c8ed"
       },
       "source": [
         "print('ow = ',len(ow))\n",
+        "print('st = ',len(stype))\n",
         "print('bhk = ',len(bhk))\n",
         "print('p = ',len(p))\n",
         "print('s = ',len(s))\n",
@@ -166,12 +173,13 @@
         "print('st = ',len(st))\n",
         "print('pps = ',len(pps))"
       ],
-      "execution_count": 5,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "ow =  1000\n",
+            "st =  1000\n",
             "bhk =  1000\n",
             "p =  1000\n",
             "s =  1000\n",
@@ -200,10 +208,11 @@
           "height": 419
         },
         "id": "SzH2MBOhTyId",
-        "outputId": "990e50cd-257e-45f8-ae33-f2d57e4d6c7a"
+        "outputId": "9d4f44f8-5cd6-44fb-f971-c34d23f9bf3a"
       },
       "source": [
-        "data = pd.DataFrame({'OWNER INFO':ow,\n",
+        "data = pd.DataFrame({'SELLER INFO':ow,\n",
+        "                     'SELLER TYPE':stype,\n",
         "                     'BHK':bhk,\n",
         "                     'PRICE':p,\n",
         "                     'SIZE':s,\n",
@@ -212,7 +221,7 @@
         "                     'PRICE PER SQ.FT':pps})\n",
         "data "
       ],
-      "execution_count": 6,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +245,8 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>OWNER INFO</th>\n",
+              "      <th>SELLER INFO</th>\n",
+              "      <th>SELLER TYPE</th>\n",
               "      <th>BHK</th>\n",
               "      <th>PRICE</th>\n",
               "      <th>SIZE</th>\n",
@@ -248,6 +258,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
+              "      <td>Anuhar Homes Pvt Ltd</td>\n",
               "      <td>BUILDER</td>\n",
               "      <td>3</td>\n",
               "      <td>1.6 Cr</td>\n",
@@ -258,6 +269,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
+              "      <td>Salarpuria Sattva</td>\n",
               "      <td>BUILDER</td>\n",
               "      <td>2</td>\n",
               "      <td>1.43 Cr</td>\n",
@@ -268,6 +280,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
+              "      <td>Risinia Builders</td>\n",
               "      <td>BUILDER</td>\n",
               "      <td>2</td>\n",
               "      <td>56.98 L</td>\n",
@@ -278,6 +291,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
+              "      <td>Suchirindia Constructions Pvt Ltd</td>\n",
               "      <td>BUILDER</td>\n",
               "      <td>2</td>\n",
               "      <td>43.6 L</td>\n",
@@ -288,6 +302,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
+              "      <td>Aakriti Constructions and Developers Pvt Ltd</td>\n",
               "      <td>BUILDER</td>\n",
               "      <td>3</td>\n",
               "      <td>65.82 L</td>\n",
@@ -305,9 +320,11 @@
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>995</th>\n",
+              "      <td>seller</td>\n",
               "      <td>OWNER</td>\n",
               "      <td>3</td>\n",
               "      <td>1.08 Cr</td>\n",
@@ -318,6 +335,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>996</th>\n",
+              "      <td>seller</td>\n",
               "      <td>OWNER</td>\n",
               "      <td>3</td>\n",
               "      <td>1.08 Cr</td>\n",
@@ -328,6 +346,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>997</th>\n",
+              "      <td>seller</td>\n",
               "      <td>OWNER</td>\n",
               "      <td>3</td>\n",
               "      <td>1.08 Cr</td>\n",
@@ -338,6 +357,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>998</th>\n",
+              "      <td>seller</td>\n",
               "      <td>OWNER</td>\n",
               "      <td>2</td>\n",
               "      <td>72 L</td>\n",
@@ -348,6 +368,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>999</th>\n",
+              "      <td>seller</td>\n",
               "      <td>OWNER</td>\n",
               "      <td>3</td>\n",
               "      <td>4.1 Cr</td>\n",
@@ -358,30 +379,30 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>1000 rows × 7 columns</p>\n",
+              "<p>1000 rows × 8 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "    OWNER INFO BHK  ...                                 STATUS PRICE PER SQ.FT\n",
-              "0      BUILDER  3   ...  Under ConstructionConstruction Status   5,699 / sq ft\n",
-              "1      BUILDER  2   ...       Ready to moveConstruction Status   9,565 / sq ft\n",
-              "2      BUILDER  2   ...  Under ConstructionConstruction Status   4,400 / sq ft\n",
-              "3      BUILDER  2   ...  Under ConstructionConstruction Status   4,899 / sq ft\n",
-              "4      BUILDER  3   ...  Under ConstructionConstruction Status   4,600 / sq ft\n",
-              "..         ...  ..  ...                                    ...             ...\n",
-              "995      OWNER  3   ...       Ready to moveConstruction Status   6,000 / sq ft\n",
-              "996      OWNER  3   ...       Ready to moveConstruction Status   6,000 / sq ft\n",
-              "997      OWNER  3   ...       Ready to moveConstruction Status   6,000 / sq ft\n",
-              "998      OWNER  2   ...       Ready to moveConstruction Status   6,075 / sq ft\n",
-              "999      OWNER  3   ...  Under ConstructionConstruction Status  12,812 / sq ft\n",
+              "                                      SELLER INFO  ... PRICE PER SQ.FT\n",
+              "0                            Anuhar Homes Pvt Ltd  ...   5,699 / sq ft\n",
+              "1                               Salarpuria Sattva  ...   9,565 / sq ft\n",
+              "2                                Risinia Builders  ...   4,400 / sq ft\n",
+              "3               Suchirindia Constructions Pvt Ltd  ...   4,899 / sq ft\n",
+              "4    Aakriti Constructions and Developers Pvt Ltd  ...   4,600 / sq ft\n",
+              "..                                            ...  ...             ...\n",
+              "995                                        seller  ...   6,000 / sq ft\n",
+              "996                                        seller  ...   6,000 / sq ft\n",
+              "997                                        seller  ...   6,000 / sq ft\n",
+              "998                                        seller  ...   6,075 / sq ft\n",
+              "999                                        seller  ...  12,812 / sq ft\n",
               "\n",
-              "[1000 rows x 7 columns]"
+              "[1000 rows x 8 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 30
         }
       ]
     },
@@ -400,9 +421,9 @@
         "id": "DI7TukRvV06Z"
       },
       "source": [
-        "data.to_csv('50 page apartment details.csv',index=False)"
+        "data.to_csv('50 pages of real estate details from makaan.csv',index=False)"
       ],
-      "execution_count": 7,
+      "execution_count": 32,
       "outputs": []
     },
     {
