--- a/Makaan_com_Real_Estate_.ipynb
+++ b/Makaan_com_Real_Estate_.ipynb
@@ -6,7 +6,7 @@
       "name": "Makaan.com Real Estate .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPMF6QTiuP2eK3wV7TtK42H",
+      "authorship_tag": "ABX9TyNqB995C7uMc1CHd0AhR9g2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,20 +208,20 @@
           "height": 419
         },
         "id": "SzH2MBOhTyId",
-        "outputId": "9d4f44f8-5cd6-44fb-f971-c34d23f9bf3a"
+        "outputId": "f15d055a-28d1-40bd-a0fd-185a552af24f"
       },
       "source": [
         "data = pd.DataFrame({'SELLER INFO':ow,\n",
         "                     'SELLER TYPE':stype,\n",
         "                     'BHK':bhk,\n",
         "                     'PRICE':p,\n",
-        "                     'SIZE':s,\n",
+        "                     'Area in sqft':s,\n",
         "                     'LOCATION':loc,\n",
         "                     'STATUS':st,\n",
         "                     'PRICE PER SQ.FT':pps})\n",
         "data "
       ],
-      "execution_count": 30,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +249,7 @@
               "      <th>SELLER TYPE</th>\n",
               "      <th>BHK</th>\n",
               "      <th>PRICE</th>\n",
-              "      <th>SIZE</th>\n",
+              "      <th>Area in sqft</th>\n",
               "      <th>LOCATION</th>\n",
               "      <th>STATUS</th>\n",
               "      <th>PRICE PER SQ.FT</th>\n",
@@ -402,7 +402,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 33
         }
       ]
     },
@@ -423,7 +423,7 @@
       "source": [
         "data.to_csv('50 pages of real estate details from makaan.csv',index=False)"
       ],
-      "execution_count": 32,
+      "execution_count": 35,
       "outputs": []
     },
     {
